# beam-opt-framework

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
beam_opt/: __init__.py  analysis.py  config.py  fixed_elements.py  mapdl_manager.py  model.py  optimization.py  report.py  section_law.py
beam_opt/stress/: __init__.py  base.py  rect_beam.py
examples/aihelmet/: __init__.py  config_v05.py  config_v07.py  run_optimization.py
